--- a/css/geral.css
+++ b/css/geral.css
@@ -1,25 +1,23 @@
 body {
     width: auto;
     height: auto;
-    border: 1px solid black;
 }
 
 #corpo {
     width: auto;
     height: auto; 
-    border: 5px black;
 }
 
 #topo {
     width: auto;
     height: 100px; 
-    border: 3px solid greenyellow;
+    background-color: #CD5C5C;
 }
 
 #esquerda {
     width: 200px;
     height: 300px;
-    border: 3px solid pink;
+    background-color: #FFA07A;
     padding: 5vw 0vw 5vw 0vw;
     display: inline-block;
 }
@@ -27,7 +25,7 @@ body {
 #direita {
     width: 200px;
     height: 300px;
-    border: 3px solid green;
+    background-color: #E9967A;
     padding: 5vw 0vw 5vw 0vw;
     display: inline-block;
 }
@@ -36,12 +34,11 @@ body {
     width: 100%;
     display: flex;
     justify-content: space-between;
-    border: 3px yellow;
+    background-color: #FA8072;
 }
 
 #rodape {
     width: auto; 
     height: 50px;
-    border: 3px solid purple;
-    text-align: end;
+    background-color: #F08080;
 }
