--- a/css/geral.css
+++ b/css/geral.css
@@ -15,34 +15,44 @@ body {
 #topo {
     width: auto;
     height: 100px; 
-    background-color: #CD5C5C;
+    border: 5px solid #B22222;
+    border-radius: 10px;
+    text-align: center;
+}
+
+#trio {
+    display: flex;
+    height: 1000px;
 }
 
 #esquerda {
-    width: 200px;
-    height: 300px;
-    background-color: #FFA07A;
-    padding: 5vw 0vw 5vw 0vw;
-    display: inline-block;
+    width: 100%;
+    border: 5px solid #B22222;
+    border-radius: 10px;
+    padding: 3px;
+    flex: 1;
 }
 
 #direita {
-    width: 200px;
-    height: 300px;
-    background-color: #E9967A;
-    padding: 5vw 0vw 5vw 0vw;
-    display: inline-block;
+    width: 100%;
+    border: 5px solid #B22222;
+    border-radius: 10px;
+    padding: 3px;
+    flex: 1;
 }
 
 #centro {
     width: 100%;
-    display: flex;
-    justify-content: space-between;
-    background-color: #FA8072;
+    border: 5px solid #B22222;
+    border-radius: 10px;
+    flex: 2;
+    text-align: center;
 }
 
 #rodape {
     width: auto; 
     height: 50px;
-    background-color: #F08080;
+    border: 5px solid #B22222;
+    border-radius: 10px;
+    text-align: center;
 }
