--- a/css/geral.css
+++ b/css/geral.css
@@ -18,7 +18,14 @@ body {
     border: 5px solid #B22222;
     border-radius: 10px;
     text-align: center;
+    display: flex;
 }
+
+#logo {
+    width: 50px;
+    flex: 1;
+}
+
 
 #trio {
     display: flex;
