--- a/css/geral.css
+++ b/css/geral.css
@@ -12,20 +12,13 @@ body {
 }
 
 #topo {
-    background-color: #1c1c1c;
-    border-radius: 10px;
     padding: 20px;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.3);
-    border: none;
     text-align: center;
 }
 
 #menu {
-    background-color: #1c1c1c;
-    border-radius: 10px;
     margin-top: 20px;
     padding: 10px;
-    border: none;
     display: flex;
     text-align: center;
 }
@@ -48,8 +41,8 @@ body {
     color: #000;
 }
 
-#botao1, #botao2, #botao3, #botao4 {
-    flex: 4;
+#botao1, #botao2, #botao3, #botao4, #botao5 {
+    flex: 5;
 }
 
 
@@ -60,13 +53,9 @@ body {
 }
 
 #centro {
-    background-color: #1c1c1c;
     padding: 15px;
     height: 350px;
-    border: none;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.3);
     text-align: center;
-    border-radius: 10px;
 }
 
 #centro {
@@ -99,11 +88,7 @@ body {
 
 #rodape {
     margin-top: 20px;
-    background-color: #1c1c1c;
-    border-radius: 10px;
     padding: 20px;
-    border: none;
-    box-shadow: 0 -2px 10px rgba(0,0,0,0.3);
     text-align: center;
 }
 
